# minimal-embedded-scheduler

./: .gitignore  CMakeLists.txt  README.md
example/: sample_main.c
src/: scheduler.c  scheduler.h  taskTimer.c  taskTimer.h
src/common/: common_def.c  common_def.h  common_stddef.h  common_utils.c  common_utils.h
